Tentei resolver mais nao deu vou voltar o commit

--- a/projeto (1)/blog.html
+++ b/projeto (1)/blog.html
@@ -43,6 +43,14 @@
 
                 <footer>Tags: <a href="#">Java Script</a>, <a href="#">boas praticas</a></footer>
             </article>
+            <ul>
+                
+                <li><h4>Teste Lucas</h4></li>
+                <li><h4>Teste Lucas</h4></li>
+                <li><h4>Teste Lucas</h4></li>
+                <li><h4>Teste Lucas</h4></li>
+            
+            </ul>
         </main>
         <img src="eu.jpg" alt="Foto de  Joao da Silva">
         <aside>
