--- a/projeto (1)/blog.html
+++ b/projeto (1)/blog.html
@@ -59,21 +59,16 @@
             </nav>
             <ul class="redes-sociais">
                 <li>
-                    <a href="https://github.com/git-joaodasilva">
-                    <img src="github.png">
-                    </a>
+                    <a class="github" href="https://github.com/git-joaodasilva">
+                    Github</a>
                 </li>
                 
                 <li>
-                    <a href="https://twitter.com/twitter-joaodasilva">
-                    <img src="twitter.png">
-                    </a>
+                    <a class="twitter" href="https://twitter.com/twitter-joaodasilva">Twitter</a>
                 </li>
                 
                 <li>
-                    <a href="https://br.linkedin.com/pub/linkedin-joao-da-silva/32/4/508">
-                    <img src="linkedin.png">
-                    </a>
+                    <a class="linkedin" href="https://br.linkedin.com/pub/linkedin-joao da-silva/32/4/508">LinkedIn</a>
                 </li>
             </ul>
         </aside>
