Finalizada aula 10 curso de HTML e CSS Basico Alura

--- a/projeto (1)/blog.html
+++ b/projeto (1)/blog.html
@@ -44,8 +44,8 @@
                 <footer>Tags: <a href="#">Java Script</a>, <a href="#">boas praticas</a></footer>
             </article>
         </main>
-        <img src="eu.jpg" alt="Foto de  Joao da Silva">
-        <aside>
+        <img class="foto" src="eu.jpg" alt="Foto de  Joao da Silva">
+        <aside class="menu">
             <h1>Joao da Silva</h1>
             <nav>
                 <ul>
