Organizacao e ultima aula do curso de HTML e CSS3 Parte I do Alura cursos Online Valeu

--- a/projeto (1)/blog.html
+++ b/projeto (1)/blog.html
@@ -3,9 +3,10 @@
     <head>
         <meta charset="utf-8">
         <title>Blog - Joao da Silva</title>
-        <link rel="icon" href="favicon.png">
-        <link rel="stylesheet" href="reset.css">
-        <link rel="stylesheet" href="site.css">
+        <link rel="icon" href="img/favicon.png">
+        <link rel="stylesheet" href="img/reset.css">
+        <link rel="stylesheet" href="css/site.css">
+        <link rel="stylesheet" href="css/blog.css">
         <!-- carrega a fonte Crimson Text nas versões normal, itálico e negrito -->
         <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Crimson+Text:400,400italic,600">
 
@@ -44,13 +45,13 @@
                 <footer>Tags: <a href="#">Java Script</a>, <a href="#">boas praticas</a></footer>
             </article>
         </main>
-        <img class="foto" src="eu.jpg" alt="Foto de  Joao da Silva">
+        <img class="foto" src="img/eu.jpg" alt="Foto de  Joao da Silva">
         <aside class="menu">
             <h1>Joao da Silva</h1>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="portfolio.html">Portifolio</a></li>
+                    <li><a href="portifolio.html">Portifolio</a></li>
                     <li><a href="bio.html">Sobre mim</a></li>
                     <li><a href="blog.html">Blog</a></li>
                     <li><a href="contato.html">Contato</a></li>
